# CMakeLibraryTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
examples/: CMakeLists.txt
tests/: CMakeLists.txt
unitTests/: CMakeLists.txt  UnitTest.cpp  UnitTest.h
